test/cases/parser/BadExtern.errors
BadExtern.b:5:12: Syntax error (expected 'function')
